Replaced About us with image
removed contents in "about us" section
added new image about-us.png into assets/img folder

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -61,30 +61,11 @@
 	    </div> <!-- /container -->
 	</div><!-- /hello -->
 
-	<section id="about-us"></section>
-	<div class="container">
-    	<div class="row">
-    		<h1 class="upper-margin">About Us</h1>
-      	</div>
-    </div>
-
+	
     <div id="chapter2" class="container">
-    	<div class="row details">
-	    	Bodhi Info Solutions is a trusted IT System Integrator in India & Middle East. Founded by a team of keen individuals with an extraordinarily flawless vision of the future, Bodhi is a master provider of a wide range of IT Business Solutions, Management Solutions and Managed Services to cater to the ever-changing IT and business needs of region.<br /><br />
-
-			Bodhi maintains strong emphasis on technologies and solutions which are tailored to key verticals. The company regularly identifies and introduces to the market technology solutions which help meet the specific IT needs of the region. Whether you need a top-notch expert with niche knowledge or a team with diverse technology skills and domain expertise, Bodhi has a pool of IT experts from which to select specialists whose background and skillset best meets client project specifications. Our resource pool includes business analysts, project managers, software architects, Web and graphic designers, flash animators, software developers, quality assurance and testing specialists.<br /><br />
-
-			The key missions of the company are fast and efficient service delivery and high customer satisfaction. We base our offerings — selected from a suite of dependable solutions — on an understanding of clients’ business requirements. We combine business domain knowledge with technology competence and proven methodologies to deliver high-quality, cost-effective results to maximize clients' competitive advantage and productivity.<br /><br />
-
-			Depending on specific requirements, our experts will take clients through each phase of solution development, step by step, providing sound advice on technology and application design options.<br />
-			Bodhi can help<br /><br />
-
-		    Bodhi is a premier IT Infrastructure solutions & services provider than can take care of all your IT support needs.<br />
-		    We can help you leverage technology to boost business productivity and cut costs.<br />
-		    Whether you need to design & build your IT network from the ground up, are ready to upgrade your existing network, or just need basic IT support.<br />
-		    In addition to basic IT outsourcing support, Bodhi is pleased to offer your company with technology-based solutions for your business challenges.
-
-    	</div><!-- /row -->
+    	<div id="about-us-left">
+    		<img src="assets/img/about-us.png" alt="" height="100%" width="100%">
+    	</div>
     </div><!-- /container -->
 
 	<div class="green" id="tab1">
