--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -63,8 +63,8 @@
 
 	
     <div id="chapter2" class="container">
-    	<div id="about-us-left">
-    		<img src="assets/img/about-us.png" alt="" height="100%" width="100%">
+    	<div id="about-us-left" class="centered">
+    		<img src="assets/img/about-us.png" alt="" height="30%" width="30%">
     	</div>
     </div><!-- /container -->
 
