--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,299 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <title>Bodhi Info Solutions</title>
+	<title>Bodhi Info Solutions</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="assets/css/main.css" rel="stylesheet">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/chart.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="assets/js/chart.js"></script>
 	<script src="assets/js/script.js"></script>
 
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+      <![endif]-->
   </head>
 
   <body>
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li class="inactive"><a href="#about-us">About Us</a></li>
-            <li class="inactive"><a href="#contact">Contact Us</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+  	<!-- Fixed navbar -->
+  	<div class="navbar navbar-default navbar-fixed-top">
+  		<div class="container">
+  			<div class="navbar-header">
+  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+  					<span class="icon-bar"></span>
+  					<span class="icon-bar"></span>
+  					<span class="icon-bar"></span>
+  				</button>
+  				<a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
+  			</div>
+  			<div class="navbar-collapse collapse">
+  				<ul class="nav navbar-nav navbar-right">
+  					<li class="active"><a href="#">Home</a></li>
+  					<li class="inactive"><a href="#about-us">About Us</a></li>
+  					<li class="inactive"><a href="#contact">Contact Us</a></li>
+  				</ul>
+  			</div><!--/.nav-collapse -->
+  		</div>
+  	</div>
 
-	<div id="hello">
-	    <div id="chapter1" class="container">
-	    	<div class="row">
-	    		<div class="col-lg-8 col-lg-offset-2 centered">
-	    			<img src="assets/img/bodhi_animated.gif" height="50%" width="50%" alt="">
-	    		</div><!-- /col-lg-8 -->
-	    	</div><!-- /row -->
-	    </div> <!-- /container -->
-	</div><!-- /hello -->
-
-	
-    <div id="chapter2" class="container">
-    	<div id="about-us-left" class="centered">
-    		<img src="assets/img/about-us.png" alt="" height="30%" width="30%">
-    	</div>
-    </div><!-- /container -->
-
-	<div class="green" id="tab1">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-7 centered">
-					<h3>WE ARE BODHI: A creative Mobile Development Team</h3>
-					<p>Modern world is moving in the fastest pace. It is impossible to imagine it without Mobile Technologies. Why Mobile Applications? They are necessary to enhance the productiveness, manage finances, for navigation, communication and entertainment. Is this list long enough? </p>
-				</div>
-				<div class="col-lg-5 centered">
-					<img src="assets/img/iphone.png" alt="">
-				</div>
-			</div>
-		</div>
-	</div><!-- /green -->
-
-	<div id="chapter3" class="container">
-		<div class="row details">
-			<p>Modern world is moving in the fastest pace. It is impossible to imagine it without Mobile Technologies. Why Mobile Applications? They are necessary to enhance the productiveness, manage finances, for navigation, communication and entertainment. Is this list long enough? Does it contain your aim? Bodhi Info Solution develops Mobile Applications for Business and Entertainment according to different platforms: <b>iOS, Android, BB, WP7</b> and others. Nowadays Mobile Application Development is the same marketing attribute as the website. Along with the development of your Mobile Application we provide a full Package of Services:<br /><br />
-
-	    	<b>Conceptualization</b><br />
-	    	Scope of work<br />
-	    	Distribution in AppStore, Android Market, Windows Marketplace<br />
-	    	Renovation and upgrading of the existing Mobile Application, including creation of versions for iPod touch and iPad, upgrading to new versions of iOS.<br />
-	    	Application’s Marketing Campaigns
-	    	</p>
-	    </div>
-	</div><!-- /container -->
-	
-	<div class="orange" id="tab2">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-5 centered">
-					<img src="assets/img/iphone.png" alt="">
-				</div>
-				
-				<div class="col-lg-7 centered">
-					<h3>WE ARE BODHI: A supercool design team</h3>
-					<p>We are a leading web development services company, offers cost effective web development solutions to the small, medium, and large corporate businesses. Our web developers utilize solid domain experience, technical expertise, and knowledge of the latest technologies </p>
-				</div>
-			</div>
-		</div>
-	</div><!-- /orange -->
-
-	<div  id="chapter4" class="container">
-		<div class="row details">
-			Bodhi info solutions a leading web development services company, offers cost effective web development solutions to the small, medium, and large corporate businesses. Our web developers utilize solid domain experience, technical expertise, and knowledge of the latest technologies while delivering the quality-driven web solutions.<br />
-			Our Web designers have the experience and knowledge to maximize the potential of your site by attracting the Web user and enhancing their experience on line. bodhi creates fast loading, high-quality, eye-catching graphics so that the user will find what he or she needs, where and when it is needed. A Web site design, also known as Web page design, can be created with the most highly advanced technologies; but at the same time not be functional. Usability is a critical aspect of your Web site's design.<br />
-			With our expert services, you will just have to focus on your business, strengthening your services is our responsibility. Our web development services will provide you with<br /><br />
-
-		    Effective online business management<br />
-		    Faster communication with customers and suppliers supporting increased online leads and sales<br />
-		    Reduced operating cost and resource utilization to run your business<br /><br />
-
-			<b>Our web development services include</b><br /><br />
-
-		    Custom web development<br />
-		    Web application development<br />
-		    Enterprise portal development
-
-	    </div>
-	</div><!-- /container -->
-	
-	<div class="green" id="tab3">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-7 centered">
-					<h3>WE ARE BODHI: An innovative Software Development Team</h3>
-					<p>Bodhi offers a rich repertoire of software services to its clients seeking customized software solutions. Be it complete office automation or database driven solutions, bodhi is the one stop solution centre for all your software requirements. We provide you with customized software </p>
-				</div>
-				<div class="col-lg-5 centered">
-					<img src="assets/img/iphone.png" alt="">
-				</div>
-			</div>
-		</div>
-	</div><!-- /green -->
-
-	<div id="chapter5" class="container">
-		<div class="row details">
-			Bodhi info solutions offers a rich repertoire of software services to its clients seeking customized software solutions. Be it complete office automation or database driven solutions, Bodhi is the one stop solution centre for all your software requirements. We provide you with customized software at competitive prices with free training and support.<br />
-			We offer exceptional performance and value in all our software products and services without sacrificing quality. It’s our assurance that you get high quality software that would be unique and puts you on top of your competitors. We possess the potential of providing the best custom software services and hence Bothi based at Kerala, India serves as just the right place for the Software development in India for your company.<br />
-			What ever may be your business, Bodhi info solutions has the ability to develop custom software for your organization as per your your requirement to make your business easier. Along with application software solution, we also provide a wide range of application management services such as application support and maintenance, re-engineering and testing. Here in Bodhi we understand the value of our clients time and money by offering quickest software support services which reduce the software down time and increase performance. Our highly experienced software development team understands your software requirement and ensure error free delivery of the application after going through a thorough and rigorous testing. 
-	    </div>
-	</div><!-- /container -->
-	
-	<div class="orange" id="tab4">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-5 centered">
-					<img src="assets/img/iphone.png" alt="">
-				</div>
-				
-				<div class="col-lg-7 centered">
-					<h3>WE ARE BODHI: We're good at SEO too</h3>
-					<p>Search Engine Optimization (SEO) is becoming an increasingly critical element in marketing your business online as many companies are now relying on SEO tools to amplify the volume of their website traffic in order to boost sales and generate revenue. SEO is not a one-time task that you complete </p>
-				</div>
-			</div>
-		</div>
-	</div><!-- /orange -->
-
-	<div class="container">
-		<div class="row details">
-			Search Engine Optimization (SEO) is becoming an increasingly critical element in marketing your business online as many companies are now relying on SEO tools to amplify the volume of their website traffic in order to boost sales and generate revenue.<br /><br />
-
-			SEO is not a one-time task that you complete and wait for the website to yield the required results, but rather an ongoing and diligent process that requires analysis, planning, content management and careful executing. You need to work with trusted partners who can provide relevant content, original articles and accurate key words, otherwise the process might simply backfire and you’ll only end up last at the race of SEO.
-			For starters if your website wants to score high on top-tier search engines such as Google, Bing and Yahoo, then it must contain the proper keywords recognized by those search engines.<br />
-			Content is king.<br /><br />
-
-			Over the past year Google algorithm has placed a great importance on quality content and this is one of our top priorities for your website. Many keywords can be really specific and may sound unnatural when placed in paragraphs. United Search Engine Optimization aims to give you content that flows and sounds natural. The overall effect of this is a website that is exciting, fresh and full of the potential to rank highly and beat its competitors that are offering the same services or products.<br />
-			Dedicated SEO Team.<br /><br />
-
-			Our SEO consultants are highly experienced in everything SEO with detailed knowledge in keyword research and density. Arabisk Network knows what users are searching for and makes sure this content is conveniently structured within your website. Our expert copywriters ensure that you have the correct keywords density and unique content for your website, which also increases your rankings on Google. We create innovative content that is still engaging to the reader while being optimized for major search engines.
-	    </div>
-	</div><!-- /container -->
-	
-	<section id="contact"></section>
-	<div class="container">
-		<h1 class="upper-margin">Contact Us</h1>
-		<div class="container">
-  			<div class="row upper-margin">
-      			<div id="map-outer" class="col-md-12">
-          			<div id="address" class="col-md-4">
-            			<h2>Our Location</h2>
-            			<address>
-            				<strong>Bodhi Info Solutions</strong><br>
-                			Kuniyil kavu Junction<br>
-                			Jafferkhan Colony Road<br>
-                			Kozhikode<br>
-                			Kerala India<br>
-                			<abbr>P:</abbr> +91 495 4019587
-           				</address>
-          			</div>
-        		<div id="map-container" class="col-md-8"></div>
-      		</div><!-- /map-outer -->
-  		</div> <!-- /row -->
-  		<div class="row details">
-			We’d love to hear from you. Whether you want to learn more about our services, chat about your project or just to say hello<br /><br />
-			Let’s connect!
-		</div>
-		<form class="row form-horizontal">
-			<div class="form-group">
-				<label for="inputName" class="control-label col-xs-2">Name</label>
-				<div class="col-xs-10">
-					<input type="text" class="form-control" id="inputName" placeholder="Enter Your Name">
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="inputEmail" class="control-label col-xs-2">Email</label>
-				<div class="col-xs-10">
-					<input type="email" class="form-control" id="inputEmail" placeholder="Enter Your Email ID">
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="inputMessage" class="control-label col-xs-2">Message</label>
-				<div class="col-xs-10">
-					<textarea class="form-control" id="inputMessage" placeholder="Enter Message"></textarea>
-				</div>
-			</div>
-			<div class="col-xs-offset-2 col-xs-10">
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</div>
-		</form>
-	</div><!-- /container -->
-
-	<div id="social">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-8 col-lg-offset-2">
-					<div class="col-md-3">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-					</div>
-					<div class="col-md-3">
-						<a href="#"><i class="fa fa-dribbble"></i></a>
-					</div>
-					<div class="col-md-3">
-						<a href="#"><i class="fa fa-twitter"></i></a>
-					</div>
-					<div class="col-md-3">
-						<a href="#"><i class="fa fa-envelope"></i></a>
-					</div>
-				</div>
-			</div>
-		</div><!-- /container -->
-	</div><!-- /social -->
+  	<div id="hello">
+  		<div id="chapter1" class="container">
+  			<div class="row">
+  				<div class="col-lg-8 col-lg-offset-2 centered">
+  					<img src="assets/img/bodhi_animated.gif" height="50%" width="50%" alt="">
+  				</div><!-- /col-lg-8 -->
+  			</div><!-- /row -->
+  		</div> <!-- /container -->
+  	</div><!-- /hello -->
 
 
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<p>Crafted with <i class="fa fa-heart"></i> by BlackTie.co.</p>
-			</div>
-		</div>
-	</div>
+  	<div id="chapter2" class="container padding30">
+  		<div id="item-left">
+  			<img src="assets/img/about-us.png" alt="" height="80%" width="80%">
+  		</div>
+  		<div id="item-right">
+  			About Us
+  			<div>
+  				Blah blah blah blah blah....
+  			</div>
+  		</div>
+  	</div><!-- /container -->
+
+  	<div id="chapter3" class="container padding30">
+  		<div id="item-left">
+  			Services
+  			<div>
+  				Blah blah blah blah blah....
+  			</div>
+  		</div>
+  		<div id="item-right">
+  			<img src="assets/img/services.png" alt="" height="80%" width="80%">
+  		</div>
+  	</div><!-- /container -->	
+
+  	<div id="chapter2" class="container padding30">
+  		<div id="item-left">
+  			<img src="assets/img/contact-us.png" alt="" height="80%" width="80%">
+  		</div>
+  		<div id="item-right">
+  			Contact Us
+  			<div>
+  				Blah blah blah blah blah....
+  			</div>-us
+  		</div>
+  	</div><!-- /container -->
+
+  	<div id="social">
+  		<div class="container">
+  			<div class="row centered">
+  				<div class="col-lg-8 col-lg-offset-2">
+  					<div class="col-md-3">
+  						<a href="#"><i class="fa fa-facebook"></i></a>
+  					</div>
+  					<div class="col-md-3">
+  						<a href="#"><i class="fa fa-dribbble"></i></a>
+  					</div>
+  					<div class="col-md-3">
+  						<a href="#"><i class="fa fa-twitter"></i></a>
+  					</div>
+  					<div class="col-md-3">
+  						<a href="#"><i class="fa fa-envelope"></i></a>
+  					</div>
+  				</div>
+  			</div>
+  		</div><!-- /container -->
+  	</div><!-- /social -->
+
+
+  	<div id="f">
+  		<div class="container">
+  			<div class="row">
+  				<p>Crafted with <i class="fa fa-heart"></i> by BlackTie.co.</p>
+  			</div>
+  		</div>
+  	</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script>
-
-    	$(document).ready(function() {
-    		$("#green").slidetoggle("slow");
-    	});    
- 
-      function init_map() {
-        var var_location = new google.maps.LatLng(11.261761,75.785092);
- 
-        var var_mapoptions = {
-          center: var_location,
-          zoom: 14
-        };
- 
-        var var_marker = new google.maps.Marker({
-            position: var_location,
-            map: var_map,
-            title:"Calicut"});
- 
-        var var_map = new google.maps.Map(document.getElementById("map-container"),
-            var_mapoptions);
- 
-        var_marker.setMap(var_map);    
- 
-      }
- 
-      google.maps.event.addDomListener(window, 'load', init_map);
- 
-    </script>
-  </body>
+</body>
 </html>
