--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,137 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="author" content="">
 
-	<title>Bodhi Info Solutions</title>
+		<title>Bodhi Info Solutions</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
+		<!-- Bootstrap core CSS -->
+		<link href="assets/css/bootstrap.css" rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link href="assets/css/main.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+		<!-- Custom styles for this template -->
+		<link href="assets/css/main.css" rel="stylesheet">
+		<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="assets/js/chart.js"></script>
-	<script src="assets/js/script.js"></script>
-
-
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-      <![endif]-->
-  </head>
-
-  <body>
-
-  	<!-- Fixed navbar -->
-  	<div class="navbar navbar-default navbar-fixed-top">
-  		<div class="container">
-  			<div class="navbar-header">
-  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  				</button>
-  				<a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
-  			</div>
-  			<div class="navbar-collapse collapse">
-  				<ul class="nav navbar-nav navbar-right">
-  					<li class="active"><a href="#">Home</a></li>
-  					<li class="inactive"><a href="#about-us">About Us</a></li>
-  					<li class="inactive"><a href="#contact">Contact Us</a></li>
-  				</ul>
-  			</div><!--/.nav-collapse -->
-  		</div>
-  	</div>
-
-  	<div id="hello">
-  		<div id="chapter1" class="container">
-  			<div class="row">
-  				<div class="col-lg-8 col-lg-offset-2 centered">
-  					<img src="assets/img/bodhi_animated.gif" height="50%" width="50%" alt="">
-  				</div><!-- /col-lg-8 -->
-  			</div><!-- /row -->
-  		</div> <!-- /container -->
-  	</div><!-- /hello -->
+		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+		<script src="assets/js/chart.js"></script>
+		<script src="assets/js/script.js"></script>
 
 
-  	<div id="chapter2" class="container padding30">
-  		<div id="item-left">
-  			<img src="assets/img/about-us.png" alt="" height="80%" width="80%">
-  		</div>
-  		<div id="item-right">
-  			About Us
-  			<div>
-  				Blah blah blah blah blah....
-  			</div>
-  		</div>
-  	</div><!-- /container -->
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!--[if lt IE 9]>
+	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+	      <![endif]-->
+	</head>
 
-  	<div id="chapter3" class="container padding30">
-  		<div id="item-left">
-  			Services
-  			<div>
-  				Blah blah blah blah blah....
-  			</div>
-  		</div>
-  		<div id="item-right">
-  			<img src="assets/img/services.png" alt="" height="80%" width="80%">
-  		</div>
-  	</div><!-- /container -->	
+	<body>
 
-  	<div id="chapter2" class="container padding30">
-  		<div id="item-left">
-  			<img src="assets/img/contact-us.png" alt="" height="80%" width="80%">
-  		</div>
-  		<div id="item-right">
-  			Contact Us
-  			<div>
-  				Blah blah blah blah blah....
-  			</div>-us
-  		</div>
-  	</div><!-- /container -->
+	  	<!-- Fixed navbar -->
+		<div class="navbar navbar-default navbar-fixed-top">
+	  		<div class="container">
+	  			<div class="navbar-header">
+	  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	  					<span class="icon-bar"></span>
+	  					<span class="icon-bar"></span>
+	  					<span class="icon-bar"></span>
+	  				</button>
+	  				<a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
+	  			</div>
+	  			<div class="navbar-collapse collapse">
+	  				<ul class="nav navbar-nav navbar-right">
+	  					<li class="active"><a href="#">Home</a></li>
+	  					<li class="inactive"><a href="#about-us">About Us</a></li>
+	  					<li class="inactive"><a href="#contact">Contact Us</a></li>
+	  				</ul>
+	  			</div><!--/.nav-collapse -->
+	  		</div>
+	  	</div>
 
-  	<div id="social">
-  		<div class="container">
-  			<div class="row centered">
-  				<div class="col-lg-8 col-lg-offset-2">
-  					<div class="col-md-3">
-  						<a href="#"><i class="fa fa-facebook"></i></a>
-  					</div>
-  					<div class="col-md-3">
-  						<a href="#"><i class="fa fa-dribbble"></i></a>
-  					</div>
-  					<div class="col-md-3">
-  						<a href="#"><i class="fa fa-twitter"></i></a>
-  					</div>
-  					<div class="col-md-3">
-  						<a href="#"><i class="fa fa-envelope"></i></a>
-  					</div>
-  				</div>
-  			</div>
-  		</div><!-- /container -->
-  	</div><!-- /social -->
+	  	<div id="hello">
+	  		<div id="chapter1" class="container">
+	  			<div class="row">
+	  				<div class="col-lg-8 col-lg-offset-2 centered">
+	  					<img src="assets/img/bodhi_animated.gif" height="50%" width="50%" alt="">
+	  				</div><!-- /col-lg-8 -->
+	  			</div><!-- /row -->
+	  		</div> <!-- /container -->
+	  	</div><!-- /hello -->
 
 
-  	<div id="f">
-  		<div class="container">
-  			<div class="row">
-  				<p>Crafted with <i class="fa fa-heart"></i> by BlackTie.co.</p>
-  			</div>
-  		</div>
-  	</div>
+	  	<div id="chapter2" class="container padding40">
+	  		<div id="item-left">
+	  			<img src="assets/img/about-us.png" alt="" height="80%" width="80%">
+	  		</div>
+	  		<div id="item-right">
+	  			About Us
+	  			<div>
+	  				Blah blah blah blah blah....
+	  			</div>
+	  		</div>
+	  	</div><!-- /container -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/bootstrap.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-</body>
+	  	<div id="chapter3" class="container padding40">
+	  		<div id="item-left">
+	  			Services
+	  			<div>
+	  				Blah blah blah blah blah....
+	  			</div>
+	  		</div>
+	  		<div id="item-right">
+	  			<img src="assets/img/services.png" alt="" height="80%" width="80%">
+	  		</div>
+	  	</div><!-- /container -->	
+
+	  	<div id="chapter4" class="container padding40">
+	  		<div id="item-left">
+	  			<img src="assets/img/contact-us.png" alt="" height="80%" width="80%">
+	  		</div>
+	  		<div id="item-right">
+	  			Contact Us
+	  			<div>
+	  				Blah blah blah blah blah....
+	  			</div>-us
+	  		</div>
+	  	</div><!-- /container -->
+
+	  	<div id="chapter5" class="padding40">
+		  	<div id="social">
+		  		<div class="container">
+		  			<div class="row centered">
+		  				<div class="col-lg-8 col-lg-offset-2">
+		  					<div class="col-md-3">
+		  						<a href="#"><i class="fa fa-facebook"></i></a>
+		  					</div>
+		  					<div class="col-md-3">
+		  						<a href="#"><i class="fa fa-dribbble"></i></a>
+		  					</div>
+		  					<div class="col-md-3">
+		  						<a href="#"><i class="fa fa-twitter"></i></a>
+		  					</div>
+		  					<div class="col-md-3">
+		  						<a href="#"><i class="fa fa-envelope"></i></a>
+		  					</div>
+		  				</div>
+		  			</div>
+		  		</div><!-- /container -->
+		  	</div><!-- /social -->
+
+	  		<div id="f">
+	  			<div class="container">
+	  				<div class="row">
+	  					<p>© Bodhi Info Solutions 2014</p>
+	  				</div>
+	  			</div>
+	  		</div>
+	  	</div>
+
+	    <!-- Bootstrap core JavaScript
+	    ================================================== -->
+	    <!-- Placed at the end of the document so the pages load faster -->
+	    <script src="assets/js/bootstrap.js"></script>
+	    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	</body>
 </html>
