added image effects
added rotation effect to images using css

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -64,10 +64,10 @@
 
 	  	<div id="chapter2" class="container padding40">
 	  		<div id="item-left">
-	  			<img src="assets/img/about-us.png" alt="" height="80%" width="80%">
+	  			<img src="assets/img/about-us.png" alt="" class="rotate" height="80%" width="80%">
 	  		</div>
 	  		<div id="item-right">
-	  			About Us
+	  			<label class="inner-header">About Us</label>
 	  			<div>
 	  				Blah blah blah blah blah....
 	  			</div>
@@ -76,22 +76,22 @@
 
 	  	<div id="chapter3" class="container padding40">
 	  		<div id="item-left">
-	  			Services
+	  			<label class="inner-header">Services</label>
 	  			<div>
 	  				Blah blah blah blah blah....
 	  			</div>
 	  		</div>
 	  		<div id="item-right">
-	  			<img src="assets/img/services.png" alt="" height="80%" width="80%">
+	  			<img src="assets/img/services.png" class="rotate" alt="" height="80%" width="80%">
 	  		</div>
 	  	</div><!-- /container -->	
 
 	  	<div id="chapter4" class="container padding40">
 	  		<div id="item-left">
-	  			<img src="assets/img/contact-us.png" alt="" height="80%" width="80%">
+	  			<img src="assets/img/contact-us.png" class="rotate" alt="" height="80%" width="80%">
 	  		</div>
 	  		<div id="item-right">
-	  			Contact Us
+	  			<label class="inner-header">Contact Us</label>
 	  			<div>
 	  				Blah blah blah blah blah....
 	  			</div>-us
