--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -20,6 +20,10 @@
 		<script src="assets/js/chart.js"></script>
 		<script src="assets/js/script.js"></script>
 
+		<!-- New Menu imports -->
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/multicolor.css" />
+
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!--[if lt IE 9]>
@@ -31,23 +35,35 @@
 	<body>
 
 	  	<!-- Fixed navbar -->
-		<div class="navbar navbar-default navbar-fixed-top">
-	  		<div class="container">
-	  			<div class="navbar-header">
-	  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	  					<span class="icon-bar"></span>
-	  					<span class="icon-bar"></span>
-	  					<span class="icon-bar"></span>
-	  				</button>
-	  				<a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
+		<div class="navbar-fixed-top margin5pct">
+	  		<div id="about" class="section">
+	  			<div class="section-title"><i class="icon-cog"><img src="img/contact.png"></i><strong>About</strong>
+	  				<p>our <span>team</span></p>
 	  			</div>
-	  			<div class="navbar-collapse collapse">
-	  				<ul class="nav navbar-nav navbar-right">
-	  					<li class="active"><a href="#">Home</a></li>
-	  					<li class="inactive"><a href="#about-us">About Us</a></li>
-	  					<li class="inactive"><a href="#contact">Contact Us</a></li>
-	  				</ul>
-	  			</div><!--/.nav-collapse -->
+	  		</div>
+
+	  		<div id="services" class="section">
+	  			<div class="section-title"><i class="icon-cog"></i><strong>Services</strong>
+	  				<p> the scope &<span> hope</span></p>
+	  			</div>
+	  		</div>
+
+	  		<div id="folio" class="section">
+	  			<div class="section-title"><i class="icon-briefcase"></i><strong>folio</strong>
+	  				<p>Achievements <span>Unlocked</span></p>
+	  			</div>  
+	  		</div>
+
+	  		<div id="blog" class="section">
+	  			<div class="section-title"><i class="icon-comments"></i><strong>Blog</strong>
+	  				<p>Authors of the<span> web</span></p>
+	  			</div>
+	  		</div>
+
+	  		<div id="contact" class="section">
+	  			<div class="section-title"><i class="icon-envelope-alt"></i><strong>Contact</strong>
+	  				<p> Send us your<span> smile</span></p>
+	  			</div>  
 	  		</div>
 	  	</div>
 
