Tried auto resizing menu and failed

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -20,10 +20,6 @@
 		<script src="assets/js/chart.js"></script>
 		<script src="assets/js/script.js"></script>
 
-		<!-- New Menu imports -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/multicolor.css" />
-
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!--[if lt IE 9]>
@@ -34,38 +30,15 @@
 
 	<body>
 
-	  	<!-- Fixed navbar -->
-		<div class="navbar-fixed-top margin5pct">
-	  		<div id="about" class="section">
-	  			<div class="section-title"><i class="icon-cog"><img src="img/contact.png"></i><strong>About</strong>
-	  				<p>our <span>team</span></p>
-	  			</div>
-	  		</div>
-
-	  		<div id="services" class="section">
-	  			<div class="section-title"><i class="icon-cog"></i><strong>Services</strong>
-	  				<p> the scope &<span> hope</span></p>
-	  			</div>
-	  		</div>
-
-	  		<div id="folio" class="section">
-	  			<div class="section-title"><i class="icon-briefcase"></i><strong>folio</strong>
-	  				<p>Achievements <span>Unlocked</span></p>
-	  			</div>  
-	  		</div>
-
-	  		<div id="blog" class="section">
-	  			<div class="section-title"><i class="icon-comments"></i><strong>Blog</strong>
-	  				<p>Authors of the<span> web</span></p>
-	  			</div>
-	  		</div>
-
-	  		<div id="contact" class="section">
-	  			<div class="section-title"><i class="icon-envelope-alt"></i><strong>Contact</strong>
-	  				<p> Send us your<span> smile</span></p>
-	  			</div>  
-	  		</div>
-	  	</div>
+		<header class='large'>
+			<nav><img class='logo' src='wdd.png'/>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Posts</a></li>
+					<li><a href="#">Awesome Freebies</a></li>
+				</ul>
+			</nav>
+		</header>
 
 	  	<div id="hello">
 	  		<div id="chapter1" class="container">
