--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -35,9 +35,9 @@
 	<body>
 
 	  	<!-- Fixed navbar -->
-		<div class="navbar-fixed-top margin5pct" style="background-color: rgba(100, 100, 100, 0.5); height:22%; margin-top:0px;">
+		<div class="navbar-fixed-top margin5pct" style="margin-top:0px">
 	  		<div id="about" class="section">
-	  			<div class="section-title"><i class="icon-cog"><img src="img/contact.png"></i><strong>About</strong>
+	  			<div class="section-title"><i class="icon-cog"></i><strong>About</strong>
 	  				<p>our <span>team</span></p>
 	  			</div>
 	  		</div>
@@ -67,7 +67,7 @@
 	  		</div>
 	  	</div>
 
-	  	<div id="hello">
+	  	<div id="hello" style="background:url('assets/img/background.jpg') no-repeat top left;">
 	  		<div id="chapter1" class="container">
 	  			<div class="row">
 	  				<div class="col-lg-8 col-lg-offset-2 centered">
