--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -67,7 +67,7 @@
 	  		</div>
 	  	</div>
 
-	  	<div id="hello" style="background:url('assets/img/background.jpg') no-repeat top left;">
+	  	<div id="hello" style="background:url('assets/img/background.jpg')">
 	  		<div id="chapter1" class="container">
 	  			<div class="row">
 	  				<div class="col-lg-8 col-lg-offset-2 centered">
