--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -50,7 +50,6 @@
 	  	<div class="navbar-fixed-top">
 		  	<header class='large'>
 		  		<nav>
-		  			<img class='logo' src="assets/img/bodhi_animated.gif"/>
 		  			<ul>
 		  				<li><a href="#">Home</a></li>
 		  				<li><a href="#">About Us</a></li>
@@ -58,6 +57,7 @@
 		  				<li><a href="#">Contact</a></li>
 		  			</ul> 
 		  		</nav>
+		  		<label class="tagline">Welcome to Bodhi. Nice to meet you.</label>
 		  	</header>
 	  	</div>
 
@@ -67,10 +67,8 @@
 
 	  	<div class="container position-rel">
 	  		<div id='about-us-overlay' class='overlay'>
-	  			<div class="row">
-	  				something
-	  				<button id="about-more-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
-	  			</div>
+  				something
+  				<button id="about-more-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
 	  		</div>
 	  		<div id="item-left">
 	  			<img src="assets/img/about-us.png" alt="" class="rotate" height="80%" width="80%">
